--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<h2>💅 Запись</h2>
+<h2>💅 Запись!!!</h2>
 <div id="content"></div>
 
 <script>
@@ -64,7 +64,7 @@ function book(slotId) {
       userName: user.first_name
     })
   }).then(() => {
-    alert("Вы записались 💅");
+    alert("Вы записались! 💅");
     tg.close();
   });
 }
