--- a/index.html
+++ b/index.html
@@ -19,16 +19,23 @@
 
     body {
       margin: 0;
-      padding: 16px;
+      padding:
+        calc(16px + var(--tg-safe-area-inset-top, 0px))
+        calc(16px + var(--tg-safe-area-inset-right, 0px))
+        calc(16px + var(--tg-safe-area-inset-bottom, 0px))
+        calc(16px + var(--tg-safe-area-inset-left, 0px));
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
       background: var(--bg);
       color: var(--text);
     }
 
+
     h2 {
       text-align: center;
-      margin-bottom: 16px;
+      margin-bottom: 20px;
+      margin-top: 10px;
     }
+
 
     h3 { margin-top: 0; }
 
