--- a/index.html
+++ b/index.html
@@ -3,74 +3,90 @@
 <head>
   <meta charset="UTF-8">
   <title>Запись на ноготочки</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 
   <style>
     :root {
       --pink: #f6c1cc;
       --pink-dark: #e89aaa;
-      --bg: #fafafa;
+      --bg: #f7f7f7;
       --card: #ffffff;
       --text: #333;
-      --radius: 14px;
+      --radius: 16px;
     }
 
-    * { box-sizing: border-box; }
+    * {
+      box-sizing: border-box;
+      -webkit-tap-highlight-color: transparent;
+    }
 
     body {
       margin: 0;
-      padding:
-        calc(16px + var(--tg-safe-area-inset-top, 0px))
-        calc(16px + var(--tg-safe-area-inset-right, 0px))
-        calc(16px + var(--tg-safe-area-inset-bottom, 0px))
-        calc(16px + var(--tg-safe-area-inset-left, 0px));
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background: var(--bg);
+      background: linear-gradient(180deg, #f6c1cc 0%, #f7f7f7 160px);
       color: var(--text);
     }
 
+    /* главный контейнер */
+    #app {
+      max-width: 420px;
+      margin: 0 auto;
+      padding: 16px;
+      min-height: 100vh;
+    }
 
     h2 {
       text-align: center;
-      margin-bottom: 20px;
-      margin-top: 10px;
+      margin: 8px 0 20px;
     }
 
+    h3 {
+      margin: 0 0 10px;
+    }
 
-    h3 { margin-top: 0; }
-
-    .section { margin-bottom: 20px; }
+    .section {
+      margin-bottom: 20px;
+    }
 
     .card {
       background: var(--card);
       border-radius: var(--radius);
       padding: 14px;
-      margin-bottom: 12px;
-      box-shadow: 0 6px 16px rgba(0,0,0,0.05);
+      box-shadow: 0 6px 18px rgba(0,0,0,0.06);
+    }
+
+    .admin {
+      border: 2px dashed var(--pink);
     }
 
     .slot {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin-bottom: 8px;
+      gap: 10px;
+      margin-bottom: 10px;
     }
 
-    .slot-time { font-weight: 500; }
+    .slot-time {
+      font-weight: 500;
+      font-size: 14px;
+    }
 
     button {
       border: none;
-      border-radius: 10px;
+      border-radius: 12px;
       padding: 10px 14px;
       font-size: 14px;
       cursor: pointer;
+      flex-shrink: 0;
     }
 
     .btn-primary {
       background: var(--pink);
     }
 
-    .btn-primary:hover {
+    .btn-primary:active {
       background: var(--pink-dark);
     }
 
@@ -80,40 +96,43 @@
 
     input {
       width: 100%;
-      padding: 10px;
-      border-radius: 10px;
+      padding: 12px;
+      border-radius: 12px;
       border: 1px solid #ddd;
       margin-bottom: 10px;
-      font-size: 14px;
-    }
-
-    .admin {
-      border: 2px dashed var(--pink);
+      font-size: 15px;
     }
 
     .empty {
       text-align: center;
       color: #777;
       font-size: 14px;
+      padding: 10px 0;
+    }
+
+    hr {
+      border: none;
+      border-top: 1px solid #eee;
+      margin: 14px 0;
     }
   </style>
 </head>
 
 <body>
 
-<h2>💅 Запись на ноготочки</h2>
-<div id="content"></div>
+<div id="app">
+  <h2>💅 Запись на ноготочки</h2>
+  <div id="content"></div>
+</div>
 
 <script>
 /* ================= DEV MODE ================= */
-// null → обычная логика
-// "admin" → принудительно админка
-// "client" → принудительно клиент
 let DEV_FORCE_ROLE = localStorage.getItem("devRole") || null;
 /* ============================================ */
 
 const tg = window.Telegram.WebApp;
 tg.expand();
+
 const ADMIN_ID = 381232429;
 const user = tg.initDataUnsafe?.user || {
   id: ADMIN_ID,
@@ -121,12 +140,22 @@ const user = tg.initDataUnsafe?.user || {
 };
 
 const API = "https://nails-backend-5knq.onrender.com";
-
 const content = document.getElementById("content");
 
 const isAdmin =
   DEV_FORCE_ROLE === "admin" ||
   (DEV_FORCE_ROLE === null && user.id === ADMIN_ID);
+
+/* ===== КЛЮЧЕВОЕ: КОРРЕКТНЫЙ ОТСТУП СВЕРХУ ===== */
+function applyTopOffset() {
+  if (!tg.viewportStableHeight) return;
+  const header = window.innerHeight - tg.viewportStableHeight;
+  document.getElementById("app").style.paddingTop =
+    Math.max(header + 8, 16) + "px";
+}
+applyTopOffset();
+tg.onEvent("viewportChanged", applyTopOffset);
+/* ============================================ */
 
 /* ---------- DEV SWITCHER ---------- */
 if (user.id === ADMIN_ID) {
@@ -157,7 +186,7 @@ if (isAdmin) {
     <input type="date" id="date">
     <input type="time" id="time">
     <button class="btn-primary" onclick="addSlot()">➕ Добавить окошко</button>
-    <hr style="margin:12px 0">
+    <hr>
     <button class="btn-secondary" onclick="loadAppointments()">📋 Показать записи</button>
     <div id="appointments"></div>
   `;
