--- a/index.html
+++ b/index.html
@@ -48,9 +48,28 @@ textarea { width:100%; border-radius:12px; border:1px solid #ddd; padding:10px; 
 
 <div id="adminPanel" style="display:none;" class="card">
   <h3>Админка</h3>
-  <button onclick="generateSlots()">Сгенерировать слоты</button>
+  
+  <!-- Выбор даты и времени для нового слота -->
+  <div style="margin-bottom:10px;">
+    <label>Дата:</label>
+    <input type="date" id="slotDate" min="<?= new Date().toISOString().split('T')[0] ?>" max="">
+  </div>
+  <div style="margin-bottom:10px;">
+    <label>Время:</label>
+    <select id="slotTime">
+      <option value="11:00">11:00</option>
+      <option value="13:00">13:00</option>
+      <option value="15:00">15:00</option>
+      <option value="17:00">17:00</option>
+      <option value="20:00">20:00</option>
+    </select>
+  </div>
+  <button onclick="addSlot()">Добавить слот</button>
+
+  <h4 style="margin-top:15px;">Записи</h4>
   <div id="appointmentsAdmin" style="margin-top:10px;"></div>
 </div>
+
 
 <div id="clientPanel">
   <div class="card">
@@ -203,20 +222,26 @@ async function submitBooking(){
   }
 }
 
-// --- Админка: сгенерировать слоты ---
-async function generateSlots(){
-  const times = ["11:00","13:00","15:00","17:00","20:00"];
-  const date = prompt("Введите дату в формате YYYY-MM-DD", new Date().toISOString().split("T")[0]);
-  if(!date) return;
-  for(const t of times){
-    await fetch(`${API}/slots`,{
-      method:"POST",
-      headers:{"Content-Type":"application/json"},
-      body:JSON.stringify({date, time:t, userId:12345})
-    });
+// --- Админка: добавить слот вручную ---
+async function addSlot(){
+  const date = document.getElementById("slotDate").value;
+  const time = document.getElementById("slotTime").value;
+  if(!date || !time){ alert("Выберите дату и время"); return; }
+
+  const res = await fetch(`${API}/slots`,{
+    method:"POST",
+    headers:{"Content-Type":"application/json"},
+    body: JSON.stringify({date, time, userId:12345})
+  });
+
+  if(res.ok){
+    alert("Слот добавлен!");
+    fetchAppointments(); // обновляем список
+  } else {
+    alert("Ошибка добавления слота");
   }
-  alert("Слоты сгенерированы");
 }
+
 
 // --- Админка: показать все записи ---
 async function fetchAppointments(){
